--- a/CYCUEG/css/fys.css
+++ b/CYCUEG/css/fys.css
@@ -1,13 +1,15 @@
 * { margin: 0; padding: 0; }
+* {box-sizing: border-box;}
 .ul {
  list-style: none; 
 } 
 
 .nav {
- width: 750px; 
+ width: 75%; 
  height: 170px; 
  border: 1px solid red; 
- margin: 100px auto; 
+ margin: 100px;
+ margin-left: 230px; 
  overflow: hidden; 
 } 
 
@@ -15,6 +17,7 @@
  width: 200%; 
  height: 100%; 
  animation: picmove 5s linear infinite forwards; 
+ animation-direction: alternate;
 } 
 
 @keyframes picmove { 
@@ -27,10 +30,40 @@
 } 
 
 .img {
- width: 250px; 
+ width: 200px; 
  height: 170px; 
  float: left; 
 } 
 
 .ul:hover { animation-play-state: paused; }
 
+
+
+.team{
+	padding-bottom: 30px;
+	margin:0 auto;
+	margin-top: 40px;
+	font-family:Microsoft Yahei;
+	font-size: 30px;
+	width: 80%;
+	height: 1200px;
+	margin-bottom: 50px;
+	padding: 50px 80px;
+
+}
+
+.int{
+	float:left;
+	padding-left: 50px;
+	padding-top: 50px;
+	padding-bottom:80px;
+}
+
+.int2{
+	font-family: 微軟正黑體;
+	font-size: 24px;
+	float:left;
+	padding-left: 50px;
+	padding-top: 350px;
+	color:#00AEAE;
+}
