--- a/CYCUGE/css/team.css
+++ b/CYCUGE/css/team.css
@@ -16,6 +16,21 @@
 	border-color: #5BB2A6;
 }
 
+.team2{
+	padding-bottom: 30px;
+	margin:0 auto;
+	margin-top: 40px;
+	font-family:Microsoft Yahei;
+	font-size: 30px;
+	width: 80%;
+	height: 650px;
+	margin-bottom: 50px;
+	padding: 50px 80px;
+	border-style: ridge;
+	border-width: 20px;
+}
+
+
 .t1{
 	width: 50%;
 	height: 310px;
@@ -101,4 +116,41 @@
 .blog_tooltip:hover .blog_tooltiptext {
 	visibility: visible;
 	opacity: 1;
+}
+
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+
+.button1:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.button2 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid red;
+}
+
+.button2:hover {
+  background-color: red;
+  color: white;
 }
