--- a/resume/css/timeline.css
+++ b/resume/css/timeline.css
@@ -343,3 +343,48 @@ header h1{
     text-align: left;
   }
 }
+
+p{
+  -webkit-column-break-after: always;
+}
+
+.container2 {
+  position: relative;
+  width: 50%;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container2:hover .image {
+  opacity: 0.3;
+}
+
+.container2:hover .middle {
+  opacity: 1;
+}
+
+.text2 {
+  width:200px;
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  margin-left:450px;
+  margin-top:300px;
+}
