--- a/final/css/menu.css
+++ b/final/css/menu.css
@@ -1,3 +1,10 @@
+/*background*/
+body{
+  background-color:#FFD306;
+    --def: #96B7C4;   
+  --inv: #fff;
+}
+
 /*menu*/
 .menu:hover .menu__link:not(:hover){
   color: #241c69;
@@ -134,9 +141,8 @@
 
 
 
-body{
-  background-color:#FFD306;
-}
+
+
 
 .dropdown {
   position: relative;
@@ -244,12 +250,6 @@ body{
 
 
 
-
-body {
-  --def: #96B7C4;   
-  --inv: #fff;
-
-}
 
 
 
@@ -421,3 +421,4 @@ a{color:inherit;text-decoration:none}
     font-size: 20px;
     letter-spacing: 1px; 
 }
+
