--- a/final/css/menu.css
+++ b/final/css/menu.css
@@ -1,9 +1,24 @@
-/*background*/
+
+header{
+  padding-bottom: 110px;
+}
+
 body{
-  background-color:#EDC36E;
+  background-color:#FFCC71;
     --def: #96B7C4;   
   --inv: #fff;
 }
+
+
+
+footer{
+  background-color: #6D8DB6;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left:0;
+}
+
 
 /*menu*/
 .menu:hover .menu__link:not(:hover){
@@ -28,14 +43,13 @@ body{
 }
 
 .menu{
-  background-color: #3D7878;
+  background-color: #6D8DB6;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .12), 0 1px 2px 0 rgba(0, 0, 0, .24);
-  font-size: 18px;
+  font-size: 14px;
 }
 
 .menu__link{
   padding: 2rem 1.5rem;
-
   font-weight: 700;
   color: #fff;
   text-decoration: none;
@@ -50,7 +64,6 @@ body{
 .menu__link{
   position: relative;
   overflow: hidden;
-
   will-change: color;
   transition: color .25s ease-out;  
 }
@@ -101,7 +114,7 @@ body{
 
 .page{
   box-sizing: border-box;
-  max-width: 1500px;
+  max-width: 1450px;
   width: 100%;  
   padding-left: 1rem;
   padding-right: 1rem;
@@ -109,7 +122,9 @@ body{
   margin-bottom: 30px;
   order: 1;
   margin: auto;
-  float: left
+  float: left;
+  margin-left:20px;
+  margin-right:10px;
 }
 
 
@@ -138,9 +153,6 @@ body{
 .linkedin__link{
   color: #ff5c5c;
 }
-
-
-
 
 
 
@@ -184,20 +196,19 @@ body{
 
 .btn {    
   position: relative; 
-  padding: 15px 15px;
-  padding-right: 5px;
+  padding: 12px 10px 12px 10px;
   font-size: 18px;
   color: var(--inv);
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);  
   cursor: pointer;
   user-select: none;
-  margin-left:1700px;
-  margin-right: 30px;
+  margin-left:1680px;
   float: left;
   margin-top:-60px;
   color:#EA7500;
   font-weight: bold;
+  width: 200px;
 }
 
 .btn:before, .btn:after {
@@ -221,6 +232,32 @@ body{
   transition-delay: .35s;
 }
 
+
+.btn-group button {
+  background-color: #FFCC71; 
+  border: 1px solid green;
+  border-color: #A16F3A; 
+  color: #A16F3A; 
+  padding:10px 10px 10px 10px;
+  cursor: pointer; 
+  float: left; 
+}
+
+
+.btn-group:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.btn-group button:not(:last-child) {
+  border-right: none; 
+}
+
+.btn-group button:hover {
+  background-color: #A16F3A;
+  color: white;
+}
 
 
 /* From Left */
@@ -278,15 +315,15 @@ a{color:inherit;text-decoration:none}
 .login-wrap{
     width:100%;
     margin:auto;
-    margin-left: 700px;
-    margin-top:200px;
     max-width:525px;
     min-height:670px;
     position:relative;
     background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
     box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+    position: absolute;
     display: none;
-    position: fixed; 
+    left:35%;
+    top:20%;
 }
 .login-html{
     width:100%;
@@ -422,3 +459,34 @@ a{color:inherit;text-decoration:none}
     letter-spacing: 1px; 
 }
 
+/*moving letters*/
+
+.ml6 {
+  position: relative;
+  font-weight: 900;
+  font-size: 3.3em;
+}
+
+.ml6 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.2em;
+  padding-right: 0.05em;
+  padding-bottom: 0.1em;
+  margin-bottom: -40px;
+  overflow: hidden;
+  font-size: 36px;
+}
+
+.ml6 .letter {
+  display: inline-block;
+  line-height: 1em;
+}
+
+.divl{
+  margin-left: 400px;
+  margin-top: -60px;
+  color:white;
+  font-size: 16px;
+  font-family: monospace
+}
