--- a/final/css/menu.css
+++ b/final/css/menu.css
@@ -9,14 +9,15 @@ body{
   --inv: #fff;
 }
 
-
+main{
+  margin-bottom: 100px;
+}
 
 footer{
   background-color: #6D8DB6;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  left:0;
+  float: left;
+  width: 1895px;
+
 }
 
 
@@ -324,6 +325,7 @@ a{color:inherit;text-decoration:none}
     display: none;
     left:35%;
     top:20%;
+    z-index: 99;
 }
 .login-html{
     width:100%;
@@ -483,10 +485,110 @@ a{color:inherit;text-decoration:none}
   line-height: 1em;
 }
 
-.divl{
-  margin-left: 400px;
+.ml5 {
+  position: relative;
+  font-weight: 300;
+  font-size: 24px;
+  color: white;
+}
+
+.ml5 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.1em;
+  padding-right: 0.05em;
+  padding-bottom: 0.15em;
+  margin-bottom: 10px;
+  line-height: 1em;
+}
+
+.ml5 .line {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 3px;
+  width: 100%;
+  background-color: #80574C;
+  transform-origin: 0.5 0;
+}
+
+.ml5 .ampersand {
+  font-family: Baskerville, serif;
+  font-style: italic;
+  font-weight: 400;
+  width: 1em;
+  margin-right: -0.1em;
+  margin-left: -0.1em;
+}
+
+.ml5 .letters {
+  display: inline-block;
+  opacity: 0;
+}
+
+.foot-1{
+  margin-left: 250px;
   margin-top: -60px;
   color:white;
-  font-size: 16px;
-  font-family: monospace
+  font-size: 18px;
+  font-family: monospace;
 }
+
+
+.foot-2{
+  text-align: center;
+  color:white;
+  font-size: 18px;
+}
+
+
+
+
+
+
+
+
+
+
+/* linktwo */
+
+
+
+
+
+[class^="link-"] {
+  display: inline-block;
+}
+
+
+
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,900);
+
+.link-2 a:hover {
+  color: #5CAAEF;
+  position: relative;
+}
+
+.link-2 a:before {
+  content: '';
+  border-bottom: solid 1px #5CAAEF;
+  position: absolute;
+  bottom: 0; left: 0;
+  width: 100%;
+  
+  opacity: 0;
+}
+
+.link-2 a:hover:before {
+  opacity: 1.0;
+}
+
+.link-2 a, .link-2 a:before {
+  -webkit-transition: all 0.2s ease;
+          transition: all 0.2s ease;
+}
+
+
+
