--- a/final/css/product2.css
+++ b/final/css/product2.css
@@ -20,7 +20,7 @@
 
 .btn-group2 button {
   background-color:#FFCC71 ; 
-  border: 1px solid black;
+  border: 2px solid black;
   border-color: #3959BE; 
   color: #3959BE; 
   padding:10px 10px 10px 6px;
@@ -40,21 +40,21 @@
 }
 
 .btn-group2 button:hover {
-  background-color: #3959BE;
+  background-color: #84C1FF;
   color: white;
 }
 
 .btn-group3 button {
-  background-color:#FFCC71 ; 
+  background-color:#A16F3A ; 
   border: 1px solid black;
-  border-color: #3959BE; 
-  color: #3959BE; 
+  border-color: #FFCC71; 
+  color: #FFCC71; 
   padding:10px 10px 10px 6px;
   cursor: pointer; 
   float: left; 
-  margin-top: 50px;
+  margin-top: 30px;
   margin-left: 430px;
-	
+	margin-bottom: 30px;
 }
 
 
@@ -69,7 +69,7 @@
 }
 
 .btn-group3 button:hover {
-  background-color: #3959BE;
+  background-color: #FFCC71;
   color: white;
 }
 
@@ -78,7 +78,6 @@
 	width: 50%;
 	margin-left: 430px;
 	margin-top: 50px;
-	height: 500px;
 }
 
 .content img {
@@ -91,6 +90,18 @@
   float: left;
 }
 
+.board{
+  float: left;
+  background-color: white;
+  width: 600px;
+  height: 150px;
+  margin-left: -250px;
+  margin-top: 100px;
+  font-size: 26px;
+  background-color: #D0865B;
+  padding-left: 20px;
+  padding-top: 10px;
+}
 
 textarea {
   overflow: auto;
@@ -99,7 +110,10 @@ textarea {
   resize: vertical;
   margin-left:-60px; 
   border-style:dashed; 
-  font-size: 24px;
+  font-size: 26px;
+  background-color: #D0865B;
+  padding-left: 20px;
+  padding-top: 10px;
 }
 
 /*rate*/
