--- a/final/css/manager.css
+++ b/final/css/manager.css
@@ -22,7 +22,7 @@
 	background-color:#EDC58D;
 }
 
-.carttable tbody tr:hover .button{
+.carttable tbody tr:hover .memberbtn{
 	background-color:#EDC58D;
 }
 
@@ -35,36 +35,108 @@
 }
 
 .list{
-	width: 76%;
-	margin-left: 220px;
+	width: 100%;
+	margin-left: 10px;
 	overflow-y:scroll; height: 550px;
+	float: left;
+	margin-top: -500px;
+	margin-bottom: 200px;	
 }
 
 .memberbtn{
 	background-color:#DDA258;
 	font-size:28px;
 	float: left;
-	margin-left: 100px;
+	margin-left: 20px;
 	margin-top: 10px;
 	font-family: "Montserrat", "Microsoft Yahei";
+	border:none;
 }
 
 
 .member{
 	width: 76%;
-	margin-left: 220px;
+	margin-left: 100px;
 	height: 350px;
 }
 
+/*tab*/
+
+* {box-sizing: border-box}
+body {font-family: "Lato", sans-serif;}
+
+/* Style the tab */
+.tab {
+  float: left;
+  border: 1px solid #ccc;
+  background-color:#DDA258;
+  width: 11.5%;
+  padding-top: 30px;
+  padding-left: 35px;
+  font-size: 28px;
+  font-family: Montserrat, Microsoft Yahei;
+  margin-top: 150px;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  display: block;
+  background-color:#DDA258;
+  color: black;
+  padding: 22px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 24px;
+  font-family: Montserrat, Microsoft Yahei;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #EDC58D;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+  background-color: #EDC58D;
+}
+
+/* Style the tab content */
+.tabcontent {
+  padding: 0px 12px;
+  border: none;
+  width: 76%;
+  border-left: none;
+  height: 300px;
+  background-color:#FFCC71;
+  margin-left: 200px;
+  height: 800px;
+
+}
+
+.map{
+	float: left; 
+	background-color:#DDA258;
+	height: 400px;width: 200px;
+	position: fixed;
+	top:240px;
+	padding-top: 30px;
+	padding-left: 35px;
+	font-size: 28px;
+    font-family: Montserrat, Microsoft Yahei;
+}
+
 .board{
-	width: 45%;
-	margin-left: 550px;
+	width: 40%;
+	margin-left: 450px;
 	overflow-y:scroll; height: 600px;
 
 }
 
 .boardtxt{
-	width: 100%;
 	height: 600px;
 	background-color: #EDC58D;
 	border: 3px solid #DDA258;
