--- a/final/css/user.css
+++ b/final/css/user.css
@@ -57,7 +57,8 @@
 .member{
 	width: 76%;
 	margin-left: 100px;
-	height: 350px;
+  height: 300px;
+  float: left;
 }
 
 /*tab*/
@@ -112,7 +113,7 @@ body {font-family: "Lato", sans-serif;}
   border-left: none;
   background-color:#FFCC71;
   margin-left: 200px;
-  margin-bottom: 675px;
+  height: 800px;
 
 }
 
@@ -128,14 +129,14 @@ body {font-family: "Lato", sans-serif;}
     font-family: Montserrat, Microsoft Yahei;
 }
 
-.board{
+.board2{
 	width: 40%;
 	margin-left: 450px;
 	overflow-y:scroll; height: 600px;
 
 }
 
-.boardtxt{
+.board2txt{
 	height: auto;
 	background-color: #EDC58D;
 	border: 3px solid #DDA258;
@@ -143,12 +144,13 @@ body {font-family: "Lato", sans-serif;}
 	font-family: "Montserrat", "Microsoft Yahei";
 	padding-top: 30px;
 	padding-left: 30px;
+
 }
 
 .memberin{
 	width: 60%;
 	margin-left: 300px;
-	height: 300px;
+	height: 600px;
 	background-color: #EDC58D;
 	float:left;
 	margin-top:80px;
@@ -158,6 +160,13 @@ body {font-family: "Lato", sans-serif;}
 	font-family: "Montserrat", "Microsoft Yahei";
 	padding-top: 30px;
 	padding-left: 30px;
+ 
+}
+
+.memberin img{
+  border-radius: 50%;
+  width: 30%;
+  margin-left: 220px;
 }
 
 /*the container must be positioned relative:*/
@@ -207,6 +216,8 @@ body {font-family: "Lato", sans-serif;}
   user-select: none;
 }
 
+
+
 /*style items (options):*/
 .select-items {
   position: absolute;
@@ -225,3 +236,33 @@ body {font-family: "Lato", sans-serif;}
 .select-items div:hover, .same-as-selected {
   background-color: #EDC58D;
 }
+
+
+.pswbtn  {
+  background-color: #FFCC71; 
+  border: 1px solid green;
+  border-color: #A16F3A; 
+  color: #A16F3A; 
+  padding:10px 10px 10px 6px;
+  cursor: pointer; 
+  font-family: "Montserrat", "Microsoft Yahei";
+  font-size: 24px;
+  margin-top: 30px;
+  margin-left: 250px;  
+}
+
+
+.pswbtn:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.pswbtn:not(:last-child) {
+  border-right: none; 
+}
+.pswbtn:hover {
+  background-color: #A16F3A;
+  color: white;
+}
+
